--- a/style/style2.css
+++ b/style/style2.css
@@ -24,6 +24,13 @@ width: 100%;
     padding: 0;
     width: 100%;
 }
+main{
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
 
 .button a{
     background-color: transparent;
@@ -55,15 +62,19 @@ p{
     font-size: 22px;
     font-weight: 600;
 }
+
 .container{
     display: flex;
-    flex-direction: row;
-
+    flex-direction:row;
 }
+#container{
+    width: 33vh; ;
+}
+
 input{
     border: 0;
     padding: 10px;
-    font-size: 38px;
+    font-size:35px;
     margin: 5px;
     background-color: rgba(72, 7, 151, 0.6);
 }
@@ -72,25 +83,23 @@ label{
     font-weight: 600;
 
 }
-#textarea{
-    border: 0;
-    font-size: 18px;
-    margin: 5px;
-    background-color: rgba(72, 7, 151, 0.6);
-    color: white;
-}
-button[type="submit"]{
-    background:rgba(232, 196, 129, 0.76) ;
-    color :white;
-    padding: 10px;
-    font-family: 20px;
-    font-weight: 600;
-    border-radius: 5px;
-}
+
 input::placeholder{
     color:white;
 }
 input:focus{
     outline: none;
     background-color: rgba(53, 0, 117, 0.876);
+}
+.kk {
+   background-color: rgb(77, 146, 236);
+    display: row;
+    justify-content: center;
+    align-items: center; 
+}
+#Modelo{
+    width: 99%;
+}
+#Propiertario{
+width: 99%;
 }
