--- a/style/style2.css
+++ b/style/style2.css
@@ -29,13 +29,13 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .button a{
     background-color: transparent;
     text-decoration:none;
-    color: white;
+    color: rgb(255, 255, 255);
     display: block;
     padding: 15px 50px;
     
@@ -61,14 +61,13 @@ img{
 p{
     font-size: 22px;
     font-weight: 600;
+    
 }
 
 .container{
     display: flex;
     flex-direction:row;
-}
-#container{
-    width: 33vh; ;
+    width: 100%;
 }
 
 input{
@@ -76,7 +75,7 @@ input{
     padding: 10px;
     font-size:35px;
     margin: 5px;
-    background-color: rgba(72, 7, 151, 0.6);
+    background-color: white;
 }
 label{
     font-size: 22px;
@@ -85,21 +84,40 @@ label{
 }
 
 input::placeholder{
-    color:white;
+    color:rgb(85, 84, 84);
 }
 input:focus{
     outline: none;
-    background-color: rgba(53, 0, 117, 0.876);
+    background-color: white;
 }
-.kk {
+
+#modelo{
+    width: 100%;
+}
+#propietario{
+width: 100%;
+}
+#placa{
+    width: 98%;
+}
+#tipo{
+    width:100% ;
+}
+#ss{
+    padding: 10px;
+    margin: 0 auto; 
+   width: 107vh;   
+   display: row;
+   justify-content: center;
+   align-items: center;
    background-color: rgb(77, 146, 236);
-    display: row;
-    justify-content: center;
-    align-items: center; 
 }
-#Modelo{
-    width: 99%;
+button[type="submit"]{
+    background:rgb(255, 255, 255) ;
+    color :rgb(7, 7, 7);
+    padding: 10px;
+    font-weight: 600;
+    border-radius: 5px;
+    background-position: center;
 }
-#Propiertario{
-width: 99%;
-}
+
